Prevent top menu bar from showing on top of advanced search sidenav
The z-index of md-sidenav is 60 by default. We set the z-index of the top menu to 70 so that it's above the search sidenav. We have to set the navigation sidenav at 80 so that it appears above the top menu bar.

--- a/webroot/css/layouts/default.css
+++ b/webroot/css/layouts/default.css
@@ -239,7 +239,10 @@ rt {
 #top_menu {
     max-width: 960px;
     margin: auto;
-    z-index: 90;
+}
+
+#top_menu:hover {
+    z-index: 70;
 }
 
 #top_menu .dropdown {
@@ -304,6 +307,10 @@ rt {
 #top_menu md-menu-item md-icon,
 .sidenav-menu .md-icon-button md-icon {
     color: #FFFFFF;
+}
+
+.sidenav-menu {
+    z-index: 80;
 }
 
 #user-menu md-divider {
